--- a/index.html
+++ b/index.html
@@ -47,34 +47,29 @@
 
 
     <!-- Navbar Start -->
- <div class="container-fluid bg-white sticky-top wow fadeIn" data-wow-delay="0.1s">
-  <div class="container">
-    <nav class="navbar navbar-expand-lg bg-white navbar-light py-1 d-flex justify-content-between align-items-center">
-      
-      <!-- اللوجو في أقصى اليمين -->
-      <a href="index.html" class="navbar-brand">
-        <img src="img/مرقاب.jpg" 
-             style="width: 220px; height: auto; margin-left: 120px;" alt="شعار المكتب">
-      </a>
+<nav class="navbar navbar-expand-lg navbar-light bg-white sticky-top custom-navbar" >
+  <div class="container-fluid">
+    <!-- اللوجو -->
+    <a class="navbar-brand" href="index.html">
+      <img src="img/مرقاب.jpg" alt="شعار المكتب" style="width:240px; height:auto;">
+    </a>
 
-      <!-- زر القائمة في الموبايل -->
-      <button type="button" class="navbar-toggler" data-bs-toggle="collapse"
-              data-bs-target="#navbarCollapse">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+    <!-- زر القائمة في الموبايل -->
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
-      <!-- القائمة المنسدلة في أقصى الشمال -->
-      <div class="collapse navbar-collapse" id="navbarCollapse">
-        <div class="navbar-nav ms-auto">
-          <a href="index.html" class="nav-item nav-link active">الرئيسية</a>
-          <a href="about.html" class="nav-item nav-link">عن المكتب</a>
-          <a href="service.html" class="nav-item nav-link">خدماتنا</a>
-          <a href="contact.html" class="nav-item nav-link">تواصل معنا</a>
-        </div>
-      </div>
-    </nav>
+    <!-- القائمة -->
+    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item"><a class="nav-link active" href="index.html">الرئيسية</a></li>
+        <li class="nav-item"><a class="nav-link" href="about.html">عن المكتب</a></li>
+        <li class="nav-item"><a class="nav-link" href="service.html">خدماتنا</a></li>
+        <li class="nav-item"><a class="nav-link" href="contact.html">تواصل معنا</a></li>
+      </ul>
+    </div>
   </div>
-</div>
+</nav>
     <!-- Navbar End -->
 
 
@@ -360,60 +355,8 @@
 
 
     <!-- Back to Top -->
-  <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top">
-  <i class="bi bi-arrow-up"></i>
-</a>
-
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-
-<style>
-  /* شكل الزر */
-  .back-to-top {
-    position: fixed;
-    bottom: 30px;
-    right: 30px;
-    display: none; /* مخفي في البداية */
-    z-index: 99;
-    transition: opacity 0.3s ease, transform 0.3s ease;
-  }
-
-  /* حركة الظهور */
-  .back-to-top.show {
-    display: inline-block;
-    opacity: 1;
-    transform: translateY(0);
-  }
-
-  /* حركة الاختفاء */
-  .back-to-top.hide {
-    opacity: 0;
-    transform: translateY(20px);
-  }
-</style>
-
-<script>
-  // إظهار وإخفاء الزر مع الحركة
-  const backToTop = document.querySelector('.back-to-top');
-
-  window.addEventListener('scroll', () => {
-    if (window.scrollY > 200) {
-      backToTop.classList.add('show');
-      backToTop.classList.remove('hide');
-    } else {
-      backToTop.classList.add('hide');
-      setTimeout(() => backToTop.classList.remove('show'), 300);
-    }
-  });
-
-  // حركة الصعود Smooth
-  backToTop.addEventListener('click', (e) => {
-    e.preventDefault();
-    window.scrollTo({
-      top: 0,
-      behavior: 'smooth'
-    });
-  });
-</script>
+    <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i
+            class="bi bi-arrow-up"></i></a>
 
              <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
